# AnimeAvataar

./: .gitignore  AnimeAvataar  CMakeLists.txt  CMakeLists.txt~  README.md  faceExtractEdgeDetect.cpp  face_landmark_detection_ex  face_landmark_detection_ex.cpp  facedetection2.cpp  facedetection2.cpp~  facialFeatureDetect.cpp
src/: FacialLandmark.cpp  face_landmark_detection_ex.cpp  mainCaller.cpp
src/header/: FacialLandmark.h
